========================
+ DVB: Show the parental rating and the content type within the EPG information when available
+ Ticket #2872, Add support for DVB-T2 and improve channel switching (new options are available to
  have a finer control on switching process)
+ Ticket #3179, DVB: Support EPG information for Freeview broadcast (UK DVB-T2)
* Updated Basque, Czech, French, German, Greek, Japanese, Romanian, Russian,
  Simplified / Traditional Chinese, Turkish and Ukrainian translations
* Updated Little CMS to v2.5-rc1
* Updated zlib to v1.2.8
* Updated Unrar to v5.0.6
* Updated MediaInfoLib to v0.7.63
* Updated ZenLib to v0.4.29
* Audio Switcher improvements:
  - Ticket #1936, Improve the normalization algorithm to avoid huge volume variations
  - Use percentage for the boost setting since it is easier to understand for most people
  - Add a setting to change the max normalization factor and use a default max normalization
    factor of 4 instead of 10
* Ticket #2567, New About dialog with more detailed information and a "Copy to clipboard" feature
  to ease support
! PGS and DVB subtitles: Fix missing subtitles after resizing the window when using
  the subpicture queue
! Open dialog: if an URL was previously enterer in the "Open" or "Dub" fields an error message
  was shown when clicking on the "Browse" button
! Vobsub files with language/title in their filenames weren't auto-loaded
! Fix a memory leak: the memory consumption would increase noticeably until the file was closed
  when the file had chapters and the chapter marks on seek bar were enabled
! Ticket #3110, DVB: Improve compatibility with some drivers for which MPC-HC failed to find
  any channel during the channel scan
! Ticket #3113, MPC-HC was sometimes slow to close (audio kept playing for a few seconds)
! Ticket #3175, DVB: Changing the channel was exiting fullscreen or maximized mode
! Ticket #3176, EVR renderers: Fix high CPU and memory usage when switching the user account